<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:layout_height="match_parent">
<com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="HELP SECTION"
    android:textSize="13sp"
    android:layout_gravity="center"
    android:gravity="center"
    android:textStyle="bold"
    android:textColor="@color/dark_colorPrimaryDark"
    android:fontFamily="@font/ubuntu2"
    />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primaryDateColorNight"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="INITIAL APPLICATION STEPS"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/dark_colorPrimaryDark"
            android:fontFamily="@font/ubuntu2"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1."
                android:textSize="13sp"
                android:fontFamily="@font/ubuntu2"
                android:textColor="#000000"
                android:textStyle="bold"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step1"
                android:textSize="13sp"
                android:fontFamily="@font/ubuntu2"
                android:textColor="#2A3DFA"
                android:textStyle="bold"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2."
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step2"
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#2A3DFA"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3."
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step3"
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#2A3DFA"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4."
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step4"
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#2A3DFA"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5."
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step5"
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#2A3DFA"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6."
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step6"
                    android:textSize="13sp"
                    android:fontFamily="@font/ubuntu2"
                    android:textColor="#2A3DFA"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>